feat: created flow to store product ids
